[gd_scene load_steps=14 format=3 uid="uid://saebmpkl5tr2"]

[ext_resource type="Script" uid="uid://bdhp6yf5h6hms" path="res://Characters/Player/player.gd" id="1_6xdwp"]
[ext_resource type="Script" uid="uid://bjmgeikc7n6xo" path="res://Characters/Player/hud.gd" id="2_j341n"]
[ext_resource type="AudioStream" uid="uid://do5m4t7gfboc5" path="res://Audio/SFX/hammer-sound.wav" id="3_bqsbk"]
[ext_resource type="PackedScene" uid="uid://b7l03do0odune" path="res://Assets/hammer.fbx" id="3_cue0d"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_kww3p"]
radius = 0.3

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_vyvq2"]
radius = 0.3

[sub_resource type="Animation" id="Animation_cue0d"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D/BlackScreen:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_6xdwp"]
resource_name = "fade_in"
length = 4.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D/BlackScreen:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(-0.03333334, 1.9966667, 4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(3.8),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [false],
"method": &"change_working_status"
}]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [true],
"method": &"hud_visible"
}]
}

[sub_resource type="Animation" id="Animation_j341n"]
resource_name = "fade_out"
length = 4.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D/BlackScreen:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3, 4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1), Color(0, 0, 0, 1)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [true],
"method": &"change_working_status"
}]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [false],
"method": &"hud_visible"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bqsbk"]
_data = {
&"RESET": SubResource("Animation_cue0d"),
&"fade_in": SubResource("Animation_6xdwp"),
&"fade_out": SubResource("Animation_j341n")
}

[sub_resource type="Animation" id="Animation_xf5fp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D/hammer:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.35604334, -0.58580315, -0.5531101)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera3D/hammer:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.20895357, -1.6049803, -0.16338721)]
}

[sub_resource type="Animation" id="Animation_bqsbk"]
resource_name = "repair"
length = 0.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D/hammer:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.099920094, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0.35604334, -0.58580315, -0.5531101), Vector3(0.35604334, -0.58580315, -0.8036252), Vector3(0.35604334, -0.58580315, -0.5531101)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera3D/hammer:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.099920094, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0.20895357, -1.6049803, -0.16338721), Vector3(0.19723094, -1.4933952, 0.3768685), Vector3(0.20895357, -1.6049803, -0.16338721)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"play_hammer_sound"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_osktb"]
_data = {
&"RESET": SubResource("Animation_xf5fp"),
&"repair": SubResource("Animation_bqsbk")
}

[node name="Player" type="CharacterBody3D" groups=["Player"]]
script = ExtResource("1_6xdwp")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
cast_shadow = 0
mesh = SubResource("CapsuleMesh_kww3p")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_vyvq2")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.6, 0)
cull_mask = 1047553

[node name="InteractionRaycast" type="RayCast3D" parent="Camera3D"]
target_position = Vector3(0, 0, -1.5)
collide_with_areas = true

[node name="BlackScreen" type="ColorRect" parent="Camera3D"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="Flashlight" type="SpotLight3D" parent="Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.21663713, 0.015482783)
light_color = Color(1, 1, 0.93333334, 1)
shadow_enabled = true
spot_range = 11.559529
spot_angle = 43.79335

[node name="hammer" parent="Camera3D" instance=ExtResource("3_cue0d")]
transform = Transform3D(-5.215405e-09, -0.02101135, -0.09776768, -0.015912306, 0.09652204, -0.02074363, 0.09872585, 0.015557101, -0.0033433952, 0.35604334, -0.58580315, -0.5531101)

[node name="HammerSound" type="AudioStreamPlayer3D" parent="Camera3D/hammer"]
transform = Transform3D(-5.820768e-07, -1.5912313, 9.87259, -2.1011343, 9.652201, 1.5557095, -9.7767725, -2.074364, -0.33433965, 7.0744514, -8.180658, 5.399842)
stream = ExtResource("3_bqsbk")
volume_db = -6.0
bus = &"SFX"

[node name="RemoteTransform3D" type="RemoteTransform3D" parent="Camera3D"]
remote_path = NodePath("../../SubViewportContainer/SubViewport/Camera3D")

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(1920, 1080)
render_target_update_mode = 4

[node name="Camera3D" type="Camera3D" parent="SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.6, 0)
cull_mask = 2

[node name="HUD" type="CanvasLayer" parent="." groups=["HUD"]]
script = ExtResource("2_j341n")

[node name="InteractionLabel" type="Label" parent="HUD"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 16
text = "."
horizontal_alignment = 1
vertical_alignment = 1

[node name="Taskscontainer" type="MarginContainer" parent="HUD"]
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10

[node name="Tasks" type="VBoxContainer" parent="HUD/Taskscontainer"]
layout_mode = 2

[node name="CommunicationContainer" type="MarginContainer" parent="HUD"]
visible = false
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -273.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="ColorRect" type="ColorRect" parent="HUD/CommunicationContainer"]
layout_mode = 2
color = Color(0, 0, 0, 0.32156864)

[node name="MarginContainer" type="MarginContainer" parent="HUD/CommunicationContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="HUD/CommunicationContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="NameLabel" type="Label" parent="HUD/CommunicationContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Name"

[node name="MessageLabel" type="Label" parent="HUD/CommunicationContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(1, 1)
layout_mode = 2
text = "Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua"
autowrap_mode = 3

[node name="FinishYourjobLabel" type="Label" parent="HUD"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -127.0
offset_top = -42.0
offset_right = 127.0
offset_bottom = 42.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 20
text = "

Finish Your Job"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FinishJobTimer" type="Timer" parent="HUD"]
wait_time = 1.5
one_shot = true

[node name="FadePlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_bqsbk")
}
autoplay = "fade_in"

[node name="RepairPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_osktb")
}

[node name="StepPlayer" type="AudioStreamPlayer3D" parent="."]
volume_db = -5.0
bus = &"SFX"

[connection signal="timeout" from="HUD/FinishJobTimer" to="." method="_on_finish_job_timer_timeout"]
